RESOLVED - bug 297807: [presence] Replace org.jivesoftware.smack/ with org.jivesoftware.smack31/ CVS https://bugs.eclipse.org/bugs/show_bug.cgi?id=297807